TRIB-3507 check in changes