@@ -4,17 +4,24 @@ env
 
 function log {
 timestamp=$(date)
-echo "$timestamp: $1" #stdout
-echo "$timestamp: $1" 1>&2; #stderr
+echo "==$timestamp: $1" #stdout
+echo "==$timestamp: $1" 1>&2; #stderr
 }
 
+CLOUDERA_PARCEL_HOME="/opt/cloudera/parcels"
 
-#exec >>/var/log/intelanalytics/rest-server/output.log 2>&1
+exec >>/var/log/intelanalytics/rest-server/output.log 2>&1
 case "$1" in
   start)
-    log "restart intelanalytics start"
-    exec su -c "java $IA_JVM_OPT -cp $CLASSPATH com.intel.intelanalytics.component.Boot api-server com.intel.intelanalytics.service.ApiServiceApplication" $IAUSER
-
+    log "start intelanalytics start"
+    pushd $ATK_LAUNCHER_DIR
+    log `pwd`
+    pwd
+    ls -l
+    echo java -XX:MaxPermSize=$ATK_MAX_HEAPSIZE $ATK_JVM_OPT -cp $ATK_CLASSPATH com.intel.intelanalytics.component.Boot api-server com.intel.intelanalytics.service.ApiServiceApplication
+    exec  java -XX:MaxPermSize=$ATK_MAX_HEAPSIZE $ATK_JVM_OPT -cp $ATK_CLASSPATH com.intel.intelanalytics.component.Boot api-server com.intel.intelanalytics.service.ApiServiceApplication
+    popd
+    log "startted intelanalytics start"
 	;;
 #  stop)
 #    echo "restart intelanalytics stop"
